# SecureOs

./: CMakeLists.txt
include/core/: Application.hpp
include/erase/: EraseExecutor.hpp  EraseManager.hpp
include/verify/: VerifyEngine.hpp  VerifyManager.hpp  VerifyResult.hpp
src/core/: Application.cpp
src/erase/: EraseExecutor.cpp  EraseManager.cpp
src/verify/: VerifyEngine.cpp  VerifyManager.cpp  VerifyResult.cpp
